@@ -1,0 +1,1 @@
+<div class="rich-text">{{ html|safe }}</div>
